# curator

./: LICENSE  README.md  curator.py  curator_new.py  demo.txt  fireworks_config.py  gather.py  generate_images.py  main.py  pyproject.toml  readme.md  requirements.txt  result.txt  results.txt  run.py  search.py  upload.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
.upm/: store.json
functions/: events.py  facebook_events.py  hashtag_generator.py  places.py  searching.py  tiktok.py
src/curatorai/: __init__.py  main.py
src/curatorai/core/: curator.py  curator_new.py  generate_images.py  query_generations.py  run.py
src/curatorai/utils/: clarifying_questions.py  create_embeddings.py  detail_extraction.py  events.py  facebook_events.py  gather.py  ig_post_finder.py  instagram.py  places.py  process_results.py  search.py  searching.py  tiktok.py  upload.py
tests/unit/: test.py
