[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.25.1"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
instructor = "^1.2.5"
langfuse = "^2.29.0"
uvicorn = "^0.29.0"
replit-object-storage = "^1.0.0"
replit = "^3.6.3"
fireworks-ai = "^0.14.0"
langchain-text-splitters = "0.0.1"
chromadb = "^0.5.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"