[tool.poetry]
name = "curatorai"
version = "0.1.0"
description = "An intelligent experience curation system"
authors = ["Anna Johnson <anna.johnson@example.com>"]
readme = "README.md"
packages = [{include = "curatorai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
logfire = "^0.8.0"
openai = "^1.25.1"
instructor = "^1.2.5"
langfuse = "^2.29.0"
replit-object-storage = "^1.0.0"
replit = "^3.6.3"
fireworks-ai = "^0.14.0"
langchain-text-splitters = "0.0.1"
chromadb = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"